--- a/app-service.yml
+++ b/app-service.yml
@@ -1,6 +1,9 @@
+server:
+  port: 0
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:1111/eureka/
-server:
-  port: 0
+  instance:
+    metadata-map:
+      instanceId: ${spring.application.name}:${random.int}
