--- a/app-service.yml
+++ b/app-service.yml
@@ -2,3 +2,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:1111/eureka/
+spring:
+  profiles: cloud
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-kdv.cfapps.io/eureka/
+  instance:
+    hostname: ${vcap.application.uris[0]}
+    non-secure-port: 80
