--- a/app-service.yml
+++ b/app-service.yml
@@ -4,12 +4,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:1111/eureka/
-spring:
-  profiles: cloud
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka-kdv.cfapps.io/eureka/
   instance:
-    hostname: ${vcap.application.uris[0]}
-    non-secure-port: 80
+    metadataMap:
+      instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
