--- a/app-service.yml
+++ b/app-service.yml
@@ -1,4 +1,10 @@
+server:
+  port: 0
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:1111/eureka/
+  instance:
+    leaseRenewalIntervalInSeconds: 10
+    metadataMap:
+      instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
