--- a/app-service.yml
+++ b/app-service.yml
@@ -2,8 +2,9 @@ server:
   port: 0
 eureka:
   client:
-    service-url:
-      defaultZone: http://localhost:1111/eureka/
+    registryFetchIntervalSeconds: 5
+#    service-url:
+ #     defaultZone: http://localhost:1111/eureka/
   instance:
     leaseRenewalIntervalInSeconds: 10
     metadataMap:
