--- a/app-service.yml
+++ b/app-service.yml
@@ -2,10 +2,8 @@ server:
   port: 0
 eureka:
   client:
-    registryFetchIntervalSeconds: 5
-#    service-url:
- #     defaultZone: http://localhost:1111/eureka/
+    service-url:
+      defaultZone: http://localhost:1111/eureka/
   instance:
-    leaseRenewalIntervalInSeconds: 10
-    metadataMap:
-      instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
+    metadata-map:
+      instance-id: ${spring.application.name}:${random.value}
