--- a/app-service.yml
+++ b/app-service.yml
@@ -4,6 +4,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:1111/eureka/
+---
+spring:
+  profiles: cloud
+eureka:
   instance:
-    metadata-map:
-      instance-id: ${spring.application.name}:${random.value}
+    hostname: ${vcap.application.uris[0]}
+    non-secure-port: 80
