--- a/app-service.yml
+++ b/app-service.yml
@@ -5,4 +5,4 @@ eureka:
     service-url:
       defaultZone: http://localhost:1111/eureka/
   instance:
-    instance-id: applicationname:${spring.application.instance_id:${random.value}}
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
