--- a/gateway.yml
+++ b/gateway.yml
@@ -4,7 +4,6 @@ eureka:
       defaultZone: http://localhost:1111/eureka/
 zuul:
   routes:
-    app-service: /app/**
-    appB-service: /appB/**
+    appB-service: /app/**
 server:
   port: 8080
